--- a/partials/menu.ejs
+++ b/partials/menu.ejs
@@ -1,117 +1,27 @@
-<nav style="background-color: #3B4252;" class="navbar navbar-expand-lg navbar-dark mb-5">
-    <a class="navbar-brand font-weight-bold a-search" href="#">SEARCH ITEMS</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent1" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
+<nav  class="navbar navbar-expand-lg navbar-dark av-principal">
+    <img class="logo mr-5" src="images/logo.png" href="#">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
     </button>
-  
-    <div class="collapse navbar-collapse" id="navbarSupportedContent1">
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav">
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    KNIVES
-                </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="#">Huntsman Knife</a>
-                    <a class="dropdown-item" href="#">Flip Knife</a>
-                    <a class="dropdown-item" href="#">Karambit</a>
-                    <a class="dropdown-item" href="#">Bayonet Knife</a>
-                    <a class="dropdown-item" href="#">M9 Bayonet Knife</a>
-                    <a class="dropdown-item" href="#">Shadow Daggers</a>
-                    <a class="dropdown-item" href="#">Bowie Knife</a>
-                    <a class="dropdown-item" href="#">Falchion Knife</a>
-                    <a class="dropdown-item" href="#">Butterfly Knife</a>
-                </div>
-            </li>                
+            <a href="/" class="nav-link font-weight-bold anchor-nav">
+                STORE
+            </a>
         </ul>
-
-        <ul class="navbar-nav">
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    RIFLES
-                </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="#">Galil AR</a>
-                    <a class="dropdown-item" href="#">AK-47</a>
-                    <a class="dropdown-item" href="#">SG 553</a>
-                    <a class="dropdown-item" href="#">G3SG 1</a>
-                    <a class="dropdown-item" href="#">FAMAS</a>
-                    <a class="dropdown-item" href="#">M4A4</a>
-                    <a class="dropdown-item" href="#">M4A1-S</a>
-                    <a class="dropdown-item" href="#">AUG</a>
-                    <a class="dropdown-item" href="#">SCAR-20</a>
-                    <a class="dropdown-item" href="#">SSG 08</a>
-                    <a class="dropdown-item" href="#">AWP</a>
-                </div>
-            </li>                
+        <ul class="navbar-nav ml-auto">
+            <a class="nav-link font-weight-bold anchor-nav" href="addfunds">
+                ADD FUNDS
+            </a>
+            <a class="nav-link font-weight-bold anchor-nav" href="">
+                SELL
+            </a>
+            <a class="nav-link font-weight-bold anchor-nav" href="">
+                INVENTORY
+            </a>
+            <a class="nav-link font-weight-bold anchor-nav" href="">
+                SIGN IN
+            </a>
         </ul>
-    
-        <ul class="navbar-nav">
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    PISTOLS
-                </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="#">Glock-18</a>
-                    <a class="dropdown-item" href="#">Tec-9</a>
-                    <a class="dropdown-item" href="#">Five-Seven</a>
-                    <a class="dropdown-item" href="#">USP-S</a>
-                    <a class="dropdown-item" href="#">P2000</a>
-                    <a class="dropdown-item" href="#">P250</a>
-                    <a class="dropdown-item" href="#">CZ75-Auto</a>
-                    <a class="dropdown-item" href="#">Dual Berettas</a>
-                    <a class="dropdown-item" href="#">Desert Eagle</a>
-                    <a class="dropdown-item" href="#">R8 Revolver</a>
-                </div>
-            </li>                
-        </ul>
-    
-        <ul class="navbar-nav">
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    SMGs
-                </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="#">MAC-10</a>
-                    <a class="dropdown-item" href="#">MP9</a>
-                    <a class="dropdown-item" href="#">PP-Bizon</a>
-                    <a class="dropdown-item" href="#">MP7</a>
-                    <a class="dropdown-item" href="#">UMP-45</a>
-                    <a class="dropdown-item" href="#">P90</a>
-                </div>
-            </li>                
-        </ul>
-    
-        <ul class="navbar-nav">
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    HEAVY
-                </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="#">MAG-7</a>
-                    <a class="dropdown-item" href="#">Nova</a>
-                    <a class="dropdown-item" href="#">Sawed-Off</a>
-                    <a class="dropdown-item" href="#">XM1014</a>
-                    <a class="dropdown-item" href="#">M249</a>
-                    <a class="dropdown-item" href="#">Negev</a>
-                </div>
-            </li>                
-        </ul>
-    
-        <ul class="navbar-nav">
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    OTHERS
-                </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="#">AGENTS</a>
-                    <a class="dropdown-item" href="#">GLOVES</a>
-                </div>
-            </li>                
-        </ul>
-
-        <form class="form-inline my-2 my-lg-0 ml-auto">
-            <input class="form-control mr-sm-2" type="search" placeholder="Item Name" aria-label="Search">
-            <button class="btn btn-outline-secondary my-2 my-sm-0" type="submit">Search</button>
-        </form>
     </div>
 </nav>
